--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ th {
     background-color: #F3F3F3;
 }
 
+.number {
+    text-align: center;
+}
+
 table, th, td {
     border: 4px solid black;
 }
